@@ -1,1 +1,0 @@
-PenMount input driver for the Xorg X server.
