@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2013/06/03 00:22:18 rodent Exp $
-lib/xorg/modules/input/penmount_drv.la
-man/man4/penmount.4
