@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 11:34:40 nia Exp $
-
-BLAKE2s (xf86-input-penmount-1.5.0.tar.bz2) = 8956809271c72c7c2bde04df0c9d9d5e3fd372d98e5daff58eee557edfb7c091
-SHA512 (xf86-input-penmount-1.5.0.tar.bz2) = 62cf58110089de62eb706c36183834a01cbe06de1d2d19375484bd45bf98b3afa99db89c6d15e0172cdb222f822ca56784da36f4d42e5f3f919d34e1478de9f7
-Size (xf86-input-penmount-1.5.0.tar.bz2) = 276864 bytes
